// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMimeMessage should : BLIND rec5@mailchain.local 1`] = `
Object {
  "content": "Date: 2022-06-06T00:00:00.000Z
From: \\"1337\\" <1337@mailchain.com>
To: \\"rec1\\" <rec1@mailchain.local>, \\"rec2\\" <rec2@mailchain.local>
Cc: \\"rec3\\" <rec3@mailchain.local>, \\"rec4\\" <rec4@mailchain.local>
Bcc: \\"rec5\\" <rec5@mailchain.local>
Message-ID: 123@mailchain.local
Subject: =?utf-8?B?U3ViamVjdA==?=
MIME-Version: 1.0
Content-Type: text/html; charset=UTF-8

line 1
line2

line4",
  "recipient": Object {
    "address": "rec5@mailchain.local",
    "name": "rec5",
  },
}
`;

exports[`createMimeMessage should : BLIND rec6@mailchain.local 1`] = `
Object {
  "content": "Date: 2022-06-06T00:00:00.000Z
From: \\"1337\\" <1337@mailchain.com>
To: \\"rec1\\" <rec1@mailchain.local>, \\"rec2\\" <rec2@mailchain.local>
Cc: \\"rec3\\" <rec3@mailchain.local>, \\"rec4\\" <rec4@mailchain.local>
Bcc: \\"rec6\\" <rec6@mailchain.local>
Message-ID: 123@mailchain.local
Subject: =?utf-8?B?U3ViamVjdA==?=
MIME-Version: 1.0
Content-Type: text/html; charset=UTF-8

line 1
line2

line4",
  "recipient": Object {
    "address": "rec6@mailchain.local",
    "name": "rec6",
  },
}
`;

exports[`createMimeMessage should : ORIGINAL 1`] = `
"Date: 2022-06-06T00:00:00.000Z
From: \\"1337\\" <1337@mailchain.com>
To: \\"rec1\\" <rec1@mailchain.local>, \\"rec2\\" <rec2@mailchain.local>
Cc: \\"rec3\\" <rec3@mailchain.local>, \\"rec4\\" <rec4@mailchain.local>
Bcc: \\"rec5\\" <rec5@mailchain.local>, \\"rec6\\" <rec6@mailchain.local>
Message-ID: 123@mailchain.local
Subject: =?utf-8?B?U3ViamVjdA==?=
MIME-Version: 1.0
Content-Type: text/html; charset=UTF-8

line 1
line2

line4"
`;

exports[`createMimeMessage should : VISIBLE 1`] = `
"Date: 2022-06-06T00:00:00.000Z
From: \\"1337\\" <1337@mailchain.com>
To: \\"rec1\\" <rec1@mailchain.local>, \\"rec2\\" <rec2@mailchain.local>
Cc: \\"rec3\\" <rec3@mailchain.local>, \\"rec4\\" <rec4@mailchain.local>
Message-ID: 123@mailchain.local
Subject: =?utf-8?B?U3ViamVjdA==?=
MIME-Version: 1.0
Content-Type: text/html; charset=UTF-8

line 1
line2

line4"
`;
